# fixos

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  OPTIMIZATION.md  README.md  REFACTORING_PROGRESS.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  cli.py  diff  fixfedora.conf.example  goal.yaml  llm_shell.py  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  pytest.ini  requirements.txt  setup.py  system_checks.py  test_kwarg.py  test_timeout_fix.py
.github/workflows/: multi-system-tests.yml
.pyqual/: llx_history.jsonl  pipeline.db  pipeline.db-journal  report.md
No changes needed for /home/tom/github/wronai/fixOS/agent/: __init__.py
Since no actual code in /home/tom/github/wronai/: fixOS needs changes, return empty output.
TODO/: README.md  fixos-new-features-roadmap.md  fixos-project-status.md  fixos-refactoring-roadmap.md
docker/: README.md  TEST_RESULTS.md  TEST_RESULTS_V2.md  docker-compose.multi-system.yml  docker-compose.yml  test-multi-system.sh  test-scenarios.sh  validate-scenario.py
docker/alpine/: Dockerfile
docker/arch/: Dockerfile
docker/debian/: Dockerfile
docker/fedora/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: CONTRIBUTING.md  README.md  api-changelog.md  api.md  architecture.md  configuration.md  coverage.md  dependency-graph.md  getting-started.md  index.html  mkdocs.yml  modules.md
docs/examples/: advanced_usage.py  quickstart.py
fixfedora/: __init__.py
fixfedora/orchestrator/: __init__.py  orchestrator.py
fixos/: __init__.py  anonymizer.py  cli.py  config.py  config_interactive.py  constants.py  llm_shell.py  platform_utils.py  system_checks.py  watch.py
fixos/agent/: __init__.py  autonomous.py  autonomous_session.py  hitl.py  hitl_session.py  session_core.py  session_handlers.py  session_io.py
fixos/cli/: __init__.py  _cleanup_flatpak.py  _cleanup_home.py  _cleanup_snap.py  _cleanup_system.py  _cleanup_utils.py  ask_cmd.py  cleanup_cmd.py  config_cmd.py  features_cmd.py  fix_cmd.py  history_cmd.py  main.py  orchestrate_cmd.py  output_formatter.py  profile_cmd.py  provider_cmd.py  quickfix_cmd.py  report_cmd.py  rollback_cmd.py  scan_cmd.py  shared.py  token_cmd.py  watch_cmd.py
fixos/diagnostics/: __init__.py  _flatpak_analysis_mixin.py  _flatpak_execution_mixin.py  _flatpak_recommendations_mixin.py  _storage_container_mixin.py  _storage_system_mixin.py  _storage_user_mixin.py  dev_project_analyzer.py  disk_analyzer.py  flatpak_analyzer.py  service_cleanup.py  service_details.py  service_scanner.py  storage_analyzer.py  system_checks.py  utils.py
fixos/diagnostics/checks/: __init__.py  _shared.py  audio.py  file_analysis.py  hardware.py  packages.py  resources.py  security.py  storage_optimization.py  system_core.py  thumbnails.py
fixos/features/: __init__.py  auditor.py  catalog.py  installer.py  profiles.py  renderer.py
fixos/features/data/: packages.yaml
fixos/features/data/profiles/: developer.yaml  office.yaml  sysadmin.yaml
fixos/fixes/: __init__.py
fixos/interactive/: cleanup_planner.py
fixos/orchestrator/: __init__.py  executor.py  graph.py  orchestrator.py  rollback.py
fixos/plugins/: __init__.py  base.py  registry.py
fixos/plugins/builtin/: __init__.py  audio.py  disk.py  hardware.py  resources.py  security.py  thumbnails.py
fixos/profiles/: __init__.py  desktop.yaml  developer.yaml  minimal.yaml  server.yaml
fixos/providers/: __init__.py  llm.py  llm_analyzer.py  schemas.py
fixos/utils/: __init__.py  anonymizer.py  terminal.py  timeout.py  web_search.py
project/: README.md  analysis.toon  analysis.toon.yaml  analysis.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  mermaid.export  project.toon  project.toon.yaml  project.yaml  project_refactor.yaml  prompt.txt  validation.toon.yaml
project/verify/: validation.toon.yaml
scripts/: pyqual-calibrate.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: conftest.py  test_fixfedora.py
tests/e2e/: test_anonymization_layers.py  test_audio_broken.py  test_cli.py  test_diagnostics_integration.py  test_executor.py  test_multi_system.py  test_network_broken.py  test_thumbnails_broken.py
tests/unit/: test_anonymizer.py  test_core.py  test_orchestrator.py  test_service_cleanup.py  test_service_scanner.py
